<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context="ufps.edu.co.canchas.ActDatosFragment">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/balon" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/nombre" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/contraseña"
            android:password="true" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/nuev_Contra"
            android:password="true" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/rep_Clave"
            android:password="true" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/telefono"
            android:phoneNumber="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="16dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/actualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizar" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/actualizar"
                android:text="@string/cancelar" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>