<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="ufps.edu.co.canchas.searchFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <Spinner
            android:id="@+id/departamentos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:entries="@array/departamentos" />

        <Spinner
            android:id="@+id/ciudades"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:entries="@array/ciudades" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="Mi Ciudad" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/valoracion"
            android:text="@string/valoracion" />

        <RatingBar
            android:id="@+id/valoracion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1.0" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/tamano"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:entries="@array/tamano" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/sel_fecha" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@+id/hora"
            android:text="@string/sel_hora" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/hora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/hora" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/minutos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/minutos" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/jornada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/jornada" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/buscar" />


    </LinearLayout>
</ScrollView>
